@@ -1,3 +1,7 @@
+2013-10-08  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
+
+	* Fixed bug #51801: typolink.linkAccessRestrictedPages has no effect if RealURL is enabled
+
 2013-10-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #51471: fatal error in info module in TYPO3 6.2 (rev a52257a56b0cdb17fd3fbda91ab4c75bd3cad33c)
